processed/gerrit/txt_full/60397.txt
Change:     60397
Subject:    LU-19180 osc: ensure ext is aligned for rpc
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/60397
Change-Id:  I46ef2194f74a91c20814a5632106035d0bc75090
Project:    fs/lustre-release
Branch:     master
Status:     ABANDONED
Owner:      Shaun Tancheff
Created:    2025-07-27 07:59:06.000000000
Updated:    2025-07-27 09:20:33.000000000
Patch Set:  2
Insertions: +155
Deletions:  -40
Comments:   5 (0 unresolved)

--- Reviewers ---
  CC: Janitor Bot

--- Commit Message ---
LU-19180 osc: ensure ext is aligned for rpc

When sending RPCs to older servers, without unaligned_dio support,
a large unaligned RPC can be construct from an extent. In such
cases the RPC is failed with -EINVAL before being sent.

However this is sub-optimal.

Instead avoid building an extent that could trigger interop and
flag extents with oe_no_merge if the next page would fail the
64k aligned check.

Fixes: 262957eaef ("LU-18691 quota: quota interop check for 64k page clients")
Signed-off-by: Shaun Tancheff <shaun.tancheff@hpe.com>
Change-Id: I46ef2194f74a91c20814a5632106035d0bc75090

--- Review History ---

--- Message (Shaun Tancheff, 2025-07-27 07:59:06.000000000) ---
Uploaded patch set 1.

--- Message (wc-checkpatch, 2025-07-27 08:02:45.000000000) ---
Patch Set 1:

(1 comment)

1 style warning(s).
For more details please see https://wiki.lustre.org/Lustre_Coding_Style_Guidelines

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2025-07-27 08:04:19.000000000) ---
Patch Set 1:

Code-wise looks good to me.

--- Message (Lustre Gerrit Janitor, 2025-07-27 08:04:46.000000000) ---
Patch Set 1:

(1 comment)

rocky8.10: Compile failed


 Job output URL: https://testing.whamcloud.com/gerrit-janitor/53802/results.html

--- Message (Janitor Bot, 2025-07-27 08:07:32.000000000) ---
Patch Set 2: Published edit on patch set 1.

--- Message (Janitor Bot, 2025-07-27 08:07:46.000000000) ---
Patch Set 1:

I attempted to fix the build errors present in this patch and succeeded. Yay! Now, keep in mind I barely have any idea what I am doing, so please doublecheck the changes I made to make sure they make sense.

This service is only provided in hopes to be useful and reduce latency from push to getting actual results in the face of trivial code errors

Here's summary of my changes:
This patch addresses a **compile error** introduced in a previous patch by fixing the **function pointer type mismatch** in the `cl_page_list_sort` function.

### Summary of Changes:

- **Original Code:**
  ```c
  list_sort(NULL, &plist->pl_pages, cl_page_list_cmp);
  ```

- **Modified Code:**
  ```c
  list_sort(NULL, &plist->pl_pages, (int (*)(void *, struct list_head *, struct list_head *))
            cl_page_list_cmp);
  ```

### What was Fixed:
- The `list_sort` function expects a comparator function with a specific signature:  
  `int (*)(void *, struct list_head *, struct list_head *)`.
- The original call to `list_sort` did not explicitly cast the comparator function `cl_page_list_cmp` to the correct type, which caused a **compile error** on some compilers.
- The patch adds an **explicit cast** to ensure the function pointer type matches what `list_sort` expects.

### Purpose:
- Ensure the code compiles correctly by resolving the function pointer type mismatch.

--- Message (jenkins, 2025-07-27 08:07:49.000000000) ---
Patch Set 1: Verified-1

Build Failed 

https://build.whamcloud.com/job/lustre-reviews/115318/ : ABORTED

--- Message (wc-checkpatch, 2025-07-27 08:08:34.000000000) ---
Patch Set 2:

(2 comments)

2 style warning(s).
For more details please see https://wiki.lustre.org/Lustre_Coding_Style_Guidelines

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2025-07-27 08:10:59.000000000) ---
Patch Set 2:

Cannot build patch due to 14, messages:

 make[4]: *** [scripts/Makefile.build:249: /home/green/git/lustre-release/lustre/osc/osc_io.o] Error 1
make[3]: *** [scripts/Makefile.build:478: /home/green/git/lustre-release/lustre/osc] Error 2
make[2]: *** [scripts/Makefile.build:478: /home/green/git/lustre-release/lustre] Error 2
make[1]: *** [Makefile:1944: /home/green/git/lustre-release] Error 2
make: *** [autoMakefile:1237: modules] Error 2
 /home/green/git/lustre-release/lustre/osc/osc_io.c: In function ‘cl_page_list_sort’:
 /home/green/git/lustre-release/lustre/osc/osc_io.c:71:43: error: passing argument 3 of ‘list_sort’ from incompatible pointer type [-Werror=incompatible-pointer-types]
    71 |         list_sort(NULL, &plist->pl_pages, (int (*)(void *, struct list_head *, struct list_head *))
       |                                           ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
       |                                           |
       |                                           int (*)(void *, struct list_head *, struct list_head *)
    72 |                   cl_page_list_cmp);
       |                   ~~~~~~~~~~~~~~~~         
 In file included from /home/green/git/lustre-release/lustre/osc/osc_io.c:25:
 ./include/linux/list_sort.h:13:68: note: expected ‘list_cmp_func_t’ {aka ‘int (*)(void *, const struct list_head *, const struct list_head *)’} but argument is of type ‘int (*)(void *, struct list_head *, struct list_head *)’
    13 | void list_sort(void *priv, struct list_head *head, list_cmp_func_t cmp);
       |                                                    ~~~~~~~~~~~~~~~~^~~

--- Message (Lustre Gerrit Janitor, 2025-07-27 08:11:24.000000000) ---
Patch Set 2:

(1 comment)

rocky9.5: Compile failed


 Job output URL: https://testing.whamcloud.com/gerrit-janitor/53805/results.html

--- Message (jenkins, 2025-07-27 08:35:15.000000000) ---
Patch Set 2: Verified-1

Build Failed 

https://build.whamcloud.com/job/lustre-reviews/115320/ : FAILURE

--- Message (Shaun Tancheff, 2025-07-27 09:20:33.000000000) ---
Abandoned

push wrong patch
